==3050== Command: ls -l
==3050== 

* A new Memcheck client request VALGRIND_COUNT_LEAK_BLOCKS has been added.
  It is similar to VALGRIND_COUNT_LEAKS but counts blocks instead of bytes.
  [XXX: consider adding VALGRIND_COUNT_LEAK_BYTES as a synonym and
  deprecating VALGRIND_COUNT_LEAKS, which wasn't a good name to begin with]

* Memcheck's leak checker has been improved.  
  - The results for --leak-check=summary now match the summary results for
    --leak-check=full.  Previously they could differ because
    --leak-check=summary counted "indirectly lost" blocks and "suppressed"
    blocks as "definitely lost".
  - Blocks that are only reachable via at least one interior-pointer, but
    are directly pointed to by a start-pointer, were previously marked as
    "still reachable".  They are now correctly marked as "possibly lost".
  - The default value for the --leak-resolution option has been changed from
    "low" to "high".  In general, this means that more leak reports will be
    produced, but each leak report will describe fewer leaked blocks.
  - The documentation for the leak checker has also been improved.

* The format of some (non-XML) stack trace entries has changed a little.
  Previously there were six possible forms:

    0x80483BF: really (a.c:20)
    0x80483BF: really (in /foo/a.out)
    0x80483BF: really
    0x80483BF: (within /foo/a.out)
    0x80483BF: ??? (a.c:20)
    0x80483BF: ???

  The third and fourth of these forms have been made more consistent with
  the others.  The six possible forms are now:
  
    0x80483BF: really (a.c:20)
    0x80483BF: really (in /foo/a.out)
    0x80483BF: really (in ???)
    0x80483BF: ??? (in /foo/a.out)
    0x80483BF: ??? (a.c:20)
    0x80483BF: ???

  Stack traces produced when --xml=yes is specified are different and
  unchanged.

* XXX: XML output has changed... along with how --xml=yes works.

* The graphs drawn by Massif's ms_print program have changed slightly: